updated new and show functionality

--- a/templates/members/show.html
+++ b/templates/members/show.html
@@ -6,6 +6,9 @@
     <p>Member ID: {{ member.id }}</p>
     <p>Membership status: {{ member.active }}</p>
 
-    <h2>Upcoming Activities</h2>
+    <h2>Upcoming Activities: </h2>
+    {% for activity in activities %}
+        <p> {{ activity.name }} on {{ activity.date }} at {{ activity.time }} </p>
+    {% endfor %}
 
 {% endblock  %}
