--- a/templates/trainers/new.html
+++ b/templates/trainers/new.html
@@ -2,9 +2,9 @@
 
 {% block content %}
     
-    <h2>Trainers</h2>
+    <h2>Add a new trainer</h2>
 
-    <form action="/trainers" method='POST'>
+    <form action="/trainers" method='POST' class='form-new'>
         
         <label for="name">Trainer name</label>
         <input type="text" name="name">
