--- a/templates/activities/show.html
+++ b/templates/activities/show.html
@@ -4,15 +4,16 @@
     
     <h2>Roster for {{ activity.name }} on {{ activity.date }}</h2>
 
-    <p>Time: {{ activity.time }}</p>
-    <p>Trainer: <a href="/trainers/{{ activity.trainer.id }}">{{ activity.trainer.name }}</a> </p>
+    <div id='roster-body'>
+        <p>Time: {{ activity.time }}</p>
+        <p>Trainer: <a href="/trainers/{{ activity.trainer.id }}">{{ activity.trainer.name }}</a> </p>
 
-    <h3>class</h3>
-    {% for booking in bookings %}
-        <p>{{ booking.member.name }} {{ booking.note }}</p>
-        <form action="/bookings/{{ booking.id }}/delete" method='POST'>
-            <button>Delete</button>
-        </form>
-    {% endfor %}
-
+        <h3>class</h3>
+        {% for booking in bookings %}
+            <p>{{ booking.member.name }} {{ booking.note }}</p>
+            <form action="/bookings/{{ booking.id }}/delete" method='POST'>
+                <button>Delete</button>
+            </form>
+        {% endfor %}
+    </div>
 {% endblock %}
