--- a/templates/members/new.html
+++ b/templates/members/new.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    
-    <form action="/members" method="POST">
+
+<h2>Add a new member</h2>
+
+    <form action="/members" method="POST" class='form-new'>
         <label for="name">Name</label>
         <input type="text" name="name">
         <input type="submit">
