--- a/templates/members/index.html
+++ b/templates/members/index.html
@@ -4,18 +4,26 @@
     
     <h2>Members </h2>
 
+    <div class='card_cont'>
     {% for member in members %}
     <div class='card'>
         <p>Name: {{ member.name }} Active: {{ member.active }}</p>
-        <a href="/members/{{ member.id }}" class='link'>View member</a>
+
+        <form action="/members/{{ member.id }}">
+            <input type="submit" value="View member" class='link'>
+        </form>
+
         <form action="/members/{{member.id}}/delete" method='POST'>
             <input type="submit" value="Delete member" class='link'>
         </form>
+
         <form action="/members/{{member.id}}/edit" method='GET'>
             <input type="submit" value="Edit member" class='link'>
         </form>
+
     </div>
     {% endfor %}
+    </div>
 
     <a href="/members/new" class='add_new'>+ Add a new member</a>
 
