--- a/templates/index.html
+++ b/templates/index.html
@@ -8,9 +8,12 @@
     {% for activity in activities %}
     <div class='card'>
         <p>{{ activity.name }} {{ activity.date }} {{ activity.time }}</p>
-        <form action="/activities/{{ activity.id }}" class='push'>
-            <input type="submit" value='View roster' class='link'>
-        </form>
+        
+        <div class='button-box'>
+            <form action="/activities/{{ activity.id }}">
+                <input type="submit" value='View roster' class='link'>
+            </form>
+        </div>
     </div>
     {% endfor %}
 </div>
