--- a/templates/trainers/index.html
+++ b/templates/trainers/index.html
@@ -11,14 +11,19 @@
        
         <p>name: {{ trainer.name }} id: {{ trainer.id }} active: {{ trainer.active }}</p>
         
-        
-        <form action="/trainers/{{ trainer.id }}/edit" class='push'>
-            <input type="submit" value='Edit trainer' class='link'>
-        </form>
+        <div class='button-box'>
+            <form action="/trainers/{{ trainer.id }}" class='push'>
+                <input type="submit" value='View trainer' class='link'>
+            </form>
+            
+            <form action="/trainers/{{ trainer.id }}/edit" >
+                <input type="submit" value='Edit trainer' class='link'>
+            </form>
 
-        <form action="/trainers/{{ trainer.id }}/delete" method="POST">
-            <input type="submit" value="Delete trainer" class='link'>
-        </form>
+            <form action="/trainers/{{ trainer.id }}/delete" method="POST">
+                <input type="submit" value="Delete trainer" class='link'>
+            </form>
+        </div>
         
      
         </div>
