--- a/templates/bookings/edit.html
+++ b/templates/bookings/edit.html
@@ -1,20 +1,23 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    
-    <form action="/bookings/{{ booking.id }}" method="POST">
+
+    <h2>Edit Booking</h2>
+
+    <form action="/bookings/{{ booking.id }}" method="POST" class='form-new'>
 
         <label for="activity_id">Activity</label>
         <select name="activity_id">
-            {% for booking in bookings %}
+            {% for activity in activities %}
                 <option value="{{ activity.id }}" {% if activity.id == booking.activity.id %}
                     selected
                 {% endif %}>{{ activity.name }}</option>
             {% endfor %}
         </select>
 
+        <label for="member_id">Member</label>
         <select name="member_id">
-            {% for booking in bookings %}
+            {% for member in members %}
                 <option value="{{ member.id }}" {% if member.id == booking.member.id %}
                     selected
                 {% endif %}>{{ member.name }}</option>
@@ -22,7 +25,7 @@
         </select>
 
         <label for="note">Add a note: </label>
-        <input type="text" name="name">
+        <input type="text" name="note">
 
         <input type="submit">
     </form>
