--- a/templates/members/show.html
+++ b/templates/members/show.html
@@ -3,6 +3,7 @@
 {% block content %}
 
     <h2>{{ member.name }}</h2>
+    <div class='form-new'>
     <p>Member ID: {{ member.id }}</p>
     <p>Membership status: {{ member.active }}</p>
 
@@ -11,4 +12,5 @@
         <p> {{ activity.name }} on {{ activity.date }} at {{ activity.time }} </p>
     {% endfor %}
 
+    </div>
 {% endblock  %}
