--- a/templates/trainers/show.html
+++ b/templates/trainers/show.html
@@ -4,6 +4,8 @@
     
     <h2>{{ trainer.name }}</h2>
 
+    <div class='form-new'>
+
     <p>active: {{ trainer.active }} id: {{ trainer.id }}</p>
 
     <h3>Upcoming activities</h3>
@@ -14,4 +16,5 @@
 
     {% endfor %}
 
+    </div>
 {% endblock  %}
