added in activity capacity functionality

--- a/templates/activities/edit.html
+++ b/templates/activities/edit.html
@@ -22,6 +22,9 @@
             {% endfor %}
         </select>
 
+        <label for="capacity">Capacity: </label>
+        <input type="number" name='capacity' value="{{ activity.capacity }}">
+
         <input type="submit">
 
     </form>
