--- a/templates/activities/index.html
+++ b/templates/activities/index.html
@@ -13,6 +13,7 @@
         <p>Name: {{ activity.name }} </p>
         <p> Date: {{ activity.date }} {{ activity.time }} </p>
         <p> Trainer: {{ activity.trainer.name }} Activity ID: {{ activity.id }}</p>
+        <p>Capacity: {{ activity.capacity }}</p>
 
         <div class='button-box'>
             <!-- view roster -->
