--- a/templates/activities/new.html
+++ b/templates/activities/new.html
@@ -24,6 +24,9 @@
         {% endfor %}
         </select>
 
+        <label for="capacity">Class Capacity</label>
+        <input type="number" name="capacity">
+
         <input type="submit">
     </form>
 
