--- a/templates/activities/show.html
+++ b/templates/activities/show.html
@@ -11,6 +11,7 @@
         <h3>class</h3>
         
         <div class='class-member'>
+        {{ error }}
         {% for booking in bookings %}
         
             <p>Name: {{ booking.member.name }}</p>
