--- a/templates/members/show.html
+++ b/templates/members/show.html
@@ -4,8 +4,8 @@
 
     <h2>{{ member.name }}</h2>
     <div class='form-new'>
-    <p>Member ID: {{ member.id }}</p>
-    <p>Membership status: {{ member.active }}</p>
+    <p><strong>Member ID: </strong>{{ member.id }}</p>
+    <p><strong>Membership status:</strong> {{ member.active }}</p>
 
     <h2>Upcoming Activities: </h2>
     {% for activity in activities %}
