--- a/templates/trainers/index.html
+++ b/templates/trainers/index.html
@@ -9,7 +9,7 @@
     
         <div class='card'>
        
-        <p>name: {{ trainer.name }} id: {{ trainer.id }} active: {{ trainer.active }}</p>
+        <p><strong>name:</strong> {{ trainer.name }} <strong>ID:</strong> {{ trainer.id }} <strong>active:</strong> {{ trainer.active }}</p>
         
         <div class='button-box'>
             <form action="/trainers/{{ trainer.id }}" class='push'>
