--- a/templates/trainers/show.html
+++ b/templates/trainers/show.html
@@ -6,7 +6,7 @@
 
     <div class='form-new'>
 
-    <p>active: {{ trainer.active }} id: {{ trainer.id }}</p>
+    <p><strong>active:</strong> {{ trainer.active }} <strong>ID:</strong> {{ trainer.id }}</p>
 
     <h3>Upcoming activities</h3>
 
