--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -1,7 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Quicksand:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Quicksand:wght@300;400;700&display=swap');
 
 *{
     font-smooth: auto;
+}
+
+p {
+    margin-right: 10px;
 }
 
 #logo {
@@ -9,12 +13,19 @@
     font-weight: 300;
     font-size: 56px;
     margin-left: 3%;
+    color: black;
+    text-decoration: none;
 }
+
 
 header {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+}
+
+header > a {
+    text-decoration: none;
 }
 
 body {
