--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1 id='logo'>Spottr</h1>
+        <a href="/"><h1  id='logo'>Spottr </h1></a>
         <nav>
             <ul>
                 <li>
